--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -5,5 +5,12 @@
         <script src = "object.js"></script>
         <script src = "script.js"></script>
     </head>
-    <body></body>
+    <body>
+        <div id="divvv"></div>
+        
+  First name: <input type="text" name="fname" id="things"><br>
+  Last name: <input type="text" name="lname" id="things"><br>
+ <button id="submit">Search</button>
+
+    </body>
 </html>
