--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -8,8 +8,7 @@
     <body>
         <div id="divvv"></div>
         
-  First name: <input type="text" name="fname" id="things"><br>
-  Last name: <input type="text" name="lname" id="things"><br>
+  Artist name: <input type="text" name="fname" id="things"><br>
  <button id="submit">Search</button>
 
     </body>
